--- a/pages/skin_care.html
+++ b/pages/skin_care.html
@@ -1,46 +1,19 @@
-<<!DOCTYPE html>
-<!-- this is telling the browser its looking at an html file-->
-
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- this is telling which characterset to use-->
-    <!-- this is where the xtra information goes that doesn't show up on the screen but important
-        to make sure the stuff goes properly-->
-
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/skin_care.css" />
-
     <title>Waxing Aftercare - Daria Aesthetics</title>
-    <!-- this shows up in the tab and in a google search -->
-
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/img/favicon_image/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/img/favicon_image/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/img/favicon_image/favicon-16x16.png"
-    />
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_image/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_image/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon_image/favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
-    <!--This is how I select the favicon in the tabs-->
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Updock&display=swap"
-      rel="stylesheet"
-    />
-    <!--This is how I pulled font from google fonts there's a corresponding code in my styles sheet-->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Updock&display=swap" rel="stylesheet" />
   </head>
 
   <body>
@@ -49,16 +22,11 @@
         <div id="menu-container"></div>
 
         <div class="logocontainer">
-          <img
-            src="../img/DAlogo2.png"
-            class="logoImage"
-            alt="DariaAesthetics logo"
-          />
+          <img src="../img/DAlogo2.png" class="logoImage" alt="DariaAesthetics logo" />
           <div class="logo">Daria Aesthetics</div>
         </div>
 
         <div id="booking-button-container"></div>
-        <!--End of top banner-->
       </div>
 
       <div class="content_container">
@@ -69,184 +37,148 @@
           <p>
             Proper aftercare is essential to maintain smooth, healthy skin and
             get the best results from your waxing treatment. Please follow these
-            guidelines carefully to prevent irritation and ensure optimal
-            healing.
+            guidelines carefully to prevent irritation and ensure optimal healing.
           </p>
         </div>
 
-        <!-- IMMEDIATELY AFTER (FIRST 24 HOURS) -->
-        <h2 class="section_title">
-          Immediately After Your Wax (First 24 Hours)
-        </h2>
+        <!-- SECTION 1: IMMEDIATELY AFTER (FIRST 24 HOURS) -->
+        <h2 class="section_title">Immediately After Your Wax (First 24 Hours)</h2>
 
         <h3 class="timeline_header">What TO DO:</h3>
 
         <div class="instruction_box">
-          <strong>Apply a soothing product:</strong> Use aloe vera gel or a
-          post-wax lotion to calm and hydrate your skin. These products help
-          reduce redness and provide a cooling sensation.
+          <strong>Apply a soothing product:</strong> Use aloe vera gel or a post-wax lotion to calm and hydrate your skin. These products help reduce redness and provide a cooling sensation.
         </div>
 
         <div class="instruction_box">
-          <strong>Keep the area clean:</strong> Gently cleanse the waxed area
-          with a mild, fragrance-free cleanser and lukewarm water. Pat dry with
-          a clean towel.
+          <strong>Keep the area clean:</strong> Gently cleanse the waxed area with a mild, fragrance-free cleanser and lukewarm water. Pat dry with a clean towel.
         </div>
 
         <div class="instruction_box">
-          <strong>Use a cool compress:</strong> If you experience discomfort,
-          apply a cool compress or ice pack wrapped in a clean cloth for 10-15
-          minutes to reduce inflammation and soothe the skin.
+          <strong>Use a cool compress:</strong> If you experience discomfort, apply a cool compress or ice pack wrapped in a clean cloth for 10-15 minutes to reduce inflammation and soothe the skin.
         </div>
 
         <div class="instruction_box">
-          <strong>Wear loose, comfortable clothing:</strong> Choose breathable,
-          cotton fabrics that won't rub against or irritate your freshly waxed
-          skin. Avoid tight-fitting clothes, especially for bikini or Brazilian
-          waxes.
+          <strong>Wear loose, comfortable clothing:</strong> Choose breathable, cotton fabrics that won't rub against or irritate your freshly waxed skin. Avoid tight-fitting clothes, especially for bikini or Brazilian waxes.
         </div>
 
         <h3 class="timeline_header">What NOT to do:</h3>
 
-        <div class="warning_box">
-          <h3>Avoid These for 24-48 Hours:</h3>
-          <ul class="dont_list">
-            <li>
-              <strong>No hot water:</strong> Avoid hot showers, baths, hot tubs,
-              saunas, and steam rooms. Heat can increase irritation and open
-              pores, leading to potential infection.
-            </li>
-            <li>
-              <strong>No sun exposure or tanning:</strong> Your skin is extra
-              sensitive after waxing. Stay out of direct sunlight and avoid
-              tanning beds. If you must go outside, apply a broad-spectrum
-              sunscreen.
-            </li>
-            <li>
-              <strong>No swimming:</strong> Avoid pools, oceans, lakes, and hot
-              tubs. Chlorine, salt water, and bacteria can irritate freshly
-              waxed skin.
-            </li>
-            <li>
-              <strong>No exercise or sweating:</strong> Skip the gym, cardio
-              workouts, and any activities that cause excessive sweating. Sweat
-              can irritate the area and clog newly opened pores.
-            </li>
-            <li>
-              <strong>No touching:</strong> Keep your hands away from the waxed
-              area to prevent introducing bacteria and oils that could cause
-              breakouts or infection.
-            </li>
-            <li>
-              <strong>No makeup or heavy products:</strong> For facial waxing
-              (brows, upper lip), avoid applying makeup, self-tanners, tinted
-              moisturizers, or products with harsh chemicals or fragrances.
-            </li>
-            <li>
-              <strong>No exfoliating products:</strong> Your skin has already
-              been exfoliated by the waxing process. Avoid scrubs, loofahs, or
-              harsh cleansers for the first 24-48 hours.
-            </li>
-          </ul>
+        <div class="instruction_box">
+          <strong>No hot water:</strong> Avoid hot showers, baths, hot tubs, saunas, and steam rooms. Heat can increase irritation and open pores, leading to potential infection.
         </div>
 
-        <!-- DAYS 2-7 -->
+        <div class="instruction_box">
+          <strong>No sun exposure or tanning:</strong> Your skin is extra sensitive after waxing. Stay out of direct sunlight and avoid tanning beds. If you must go outside, apply a broad-spectrum sunscreen.
+        </div>
+
+        <div class="instruction_box">
+          <strong>No swimming:</strong> Avoid pools, oceans, lakes, and hot tubs. Chlorine, salt water, and bacteria can irritate freshly waxed skin.
+        </div>
+
+        <div class="instruction_box">
+          <strong>No exercise or sweating:</strong> Skip the gym, cardio workouts, and any activities that cause excessive sweating. Sweat can irritate the area and clog newly opened pores.
+        </div>
+
+        <div class="instruction_box">
+          <strong>No touching:</strong> Keep your hands away from the waxed area to prevent introducing bacteria and oils that could cause breakouts or infection.
+        </div>
+
+        <div class="instruction_box">
+          <strong>No makeup or heavy products:</strong> For facial waxing (brows, upper lip), avoid applying makeup, self-tanners, tinted moisturizers, or products with harsh chemicals or fragrances.
+        </div>
+
+        <div class="instruction_box">
+          <strong>No exfoliating products:</strong> Your skin has already been exfoliated by the waxing process. Avoid scrubs, loofahs, or harsh cleansers for the first 24-48 hours.
+        </div>
+
+        <!-- SECTION 2: DAYS 2-7 AFTER YOUR WAX -->
         <h2 class="section_title">Days 2-7 After Your Wax</h2>
 
+        <h3 class="timeline_header">What TO DO:</h3>
+
         <div class="instruction_box">
-          <strong>Begin gentle exfoliation (after 48 hours):</strong> Starting
-          2-3 days after your wax, gently exfoliate the waxed area 2-3 times per
-          week. This helps prevent ingrown hairs by removing dead skin cells and
-          allowing hair to grow freely. Use a gentle sugar scrub or exfoliating
-          mitt designed for sensitive skin.
+          <strong>Begin gentle exfoliation (after 48 hours):</strong> Starting 2-3 days after your wax, gently exfoliate the waxed area 2-3 times per week. This helps prevent ingrown hairs by removing dead skin cells and allowing hair to grow freely. Use a gentle sugar scrub or exfoliating mitt designed for sensitive skin.
         </div>
 
         <div class="instruction_box">
-          <strong>Moisturize daily:</strong> Keep your skin hydrated by applying
-          a lightweight, oil-free, fragrance-free moisturizer every day.
-          Well-moisturized skin is less prone to irritation and ingrown hairs.
-          Avoid heavy oils or products that can clog pores.
+          <strong>Moisturize daily:</strong> Keep your skin hydrated by applying a lightweight, oil-free, fragrance-free moisturizer every day. Well-moisturized skin is less prone to irritation and ingrown hairs. Avoid heavy oils or products that can clog pores.
         </div>
 
         <div class="instruction_box">
-          <strong>Stay hydrated:</strong> Drink plenty of water to help your
-          skin heal and maintain smoothness from the inside out.
+          <strong>Stay hydrated:</strong> Drink plenty of water to help your skin heal and maintain smoothness from the inside out.
         </div>
 
-        <!-- ONGOING CARE -->
+        <h3 class="timeline_header">What NOT to do:</h3>
+
+        <div class="instruction_box">
+          <strong>No harsh products:</strong> Continue to avoid products with harsh chemicals, fragrances, or active ingredients like retinoids or acids until your skin has fully healed.
+        </div>
+
+        <div class="instruction_box">
+          <strong>No picking or scratching:</strong> If you experience any bumps or irritation, do not pick at them. This can lead to scarring or infection.
+        </div>
+
+        <!-- SECTION 3: ONGOING CARE BETWEEN APPOINTMENTS -->
         <h2 class="section_title">Ongoing Care Between Waxing Appointments</h2>
 
+        <h3 class="timeline_header">What TO DO:</h3>
+
         <div class="instruction_box">
-          <strong>Maintain your exfoliation routine:</strong> Continue
-          exfoliating 2-3 times per week to prevent ingrown hairs and keep skin
-          smooth.
+          <strong>Maintain your exfoliation routine:</strong> Continue exfoliating 2-3 times per week to prevent ingrown hairs and keep skin smooth.
         </div>
 
         <div class="instruction_box">
-          <strong>Keep moisturizing:</strong> Daily moisturization is key to
-          maintaining healthy, smooth skin.
+          <strong>Keep moisturizing:</strong> Daily moisturization is key to maintaining healthy, smooth skin.
         </div>
 
         <div class="instruction_box">
-          <strong>Don't tweeze between appointments:</strong> Resist the urge to
-          pluck stray hairs! Tweezing disrupts the hair growth cycle and can
-          lead to uneven results at your next waxing appointment.
+          <strong>Schedule regular appointments:</strong> For best results, wax every 3-4 weeks. Consistent waxing makes hair grow back softer, finer, and less dense over time, making each treatment more comfortable.
+        </div>
+
+        <h3 class="timeline_header">What NOT to do:</h3>
+
+        <div class="instruction_box">
+          <strong>Don't tweeze between appointments:</strong> Resist the urge to pluck stray hairs! Tweezing disrupts the hair growth cycle and can lead to uneven results at your next waxing appointment.
         </div>
 
         <div class="instruction_box">
-          <strong>Schedule regular appointments:</strong> For best results, wax
-          every 3-4 weeks. Consistent waxing makes hair grow back softer, finer,
-          and less dense over time, making each treatment more comfortable.
+          <strong>Don't shave:</strong> Shaving will disrupt your waxing results and cause hair to grow back thicker and coarser. Stick to waxing for the smoothest, longest-lasting results.
         </div>
 
-        <!-- TIPS BOX -->
+        <!-- SECTION 4: SPECIAL CONSIDERATIONS -->
+        <h2 class="section_title">Special Considerations</h2>
+
+        <h3 class="timeline_header">For Facial Waxing (Brows, Upper Lip):</h3>
+
+        <div class="instruction_box">
+          <strong>Be especially gentle:</strong> Avoid touching the area with your fingers, which can introduce oil and impurities. Wait at least 24 hours before applying makeup or using active skincare ingredients like retinoids or exfoliating acids.
+        </div>
+
+        <h3 class="timeline_header">For Bikini and Brazilian Waxes:</h3>
+
+        <div class="instruction_box">
+          <strong>Wear fresh, breathable underwear:</strong> Choose cotton fabrics and change out of wet bathing suits promptly. The area may feel more sensitive for the first treatment, but sensitivity typically decreases with regular waxing.
+        </div>
+
+        <h3 class="timeline_header">For Body Waxing (Legs, Arms, Back, Chest):</h3>
+
+        <div class="instruction_box">
+          <strong>Wear loose clothing:</strong> Avoid abrasive materials that might irritate the skin immediately after treatment.
+        </div>
+
+        <!-- PRO TIPS BOX -->
         <div class="tip_box">
           <h3>Pro Tips for Best Results:</h3>
           <ul>
-            <li>
-              Your third wax is typically your best wax! Hair growth cycles even
-              out, making the experience more comfortable.
-            </li>
-            <li>
-              Allow hair to grow for 3-4 weeks between waxing appointments for
-              optimal results.
-            </li>
-            <li>
-              If you experience any unusual redness, swelling, or signs of
-              infection that don't subside within 24 hours, please contact us or
-              consult your healthcare provider.
-            </li>
-            <li>
-              Natural, cotton-based fabrics are your best friend after waxing!
-            </li>
+            <li>Your third wax is typically your best wax! Hair growth cycles even out, making the experience more comfortable.</li>
+            <li>Allow hair to grow for 3-4 weeks between waxing appointments for optimal results.</li>
+            <li>If you experience any unusual redness, swelling, or signs of infection that don't subside within 24 hours, please contact us or consult your healthcare provider.</li>
+            <li>Natural, cotton-based fabrics are your best friend after waxing!</li>
           </ul>
         </div>
 
-        <!-- SPECIAL CONSIDERATIONS -->
-        <h2 class="section_title">Special Considerations</h2>
-
-        <div class="instruction_box">
-          <strong>For facial waxing (brows, upper lip):</strong> Be especially
-          gentle with your skin. Avoid touching the area with your fingers,
-          which can introduce oil and impurities. Wait at least 24 hours before
-          applying makeup or using active skincare ingredients like retinoids or
-          exfoliating acids.
-        </div>
-
-        <div class="instruction_box">
-          <strong>For bikini and Brazilian waxes:</strong> Wear fresh,
-          breathable cotton underwear. Change out of wet bathing suits promptly.
-          The area may feel more sensitive for the first treatment, but
-          sensitivity typically decreases with regular waxing.
-        </div>
-
-        <div class="instruction_box">
-          <strong>For body waxing (legs, arms, back, chest):</strong> Wear loose
-          clothing immediately after treatment. Avoid abrasive materials that
-          might irritate the skin.
-        </div>
-
-        <!-- CONTACT -->
+        <!-- CONTACT BOX -->
         <div class="warning_box">
           <h3>Questions or Concerns?</h3>
           <p>
@@ -255,7 +187,7 @@
             here to help you achieve the best possible results!
           </p>
           <p style="text-align: center; margin-top: 20px">
-            <a href="/pages/contact.html" class="booking_button">Contact Us</a>
+            <a href="/contact" class="booking_button">Contact Us</a>
           </p>
         </div>
       </div>
